--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   # Biographic information
   avatar           : "profile.jpg"
   name             : "Duy-Nam Bui"
-  pronouns         : # example: "she/her"  
+  pronouns         : "he/his"
   bio              : "M.Sc. in Electronics Engineering - Robotics Engineer"
   location         : "Hanoi, Vietnam"
   employer         : "Vietnam National University"
