--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ author:
   avatar           : "profile.jpg"
   name             : "Duy-Nam Bui"
   pronouns         : "🇻🇳 he/his"
-  bio              : "M.Sc. in Electronics Engineering - Robotics Engineer"
-  location         : "Hanoi, Vietnam"
-  employer         : "Vietnam National University"
+  bio              : "Ph.D. Candidate in Automatic Control"
+  location         : "Linköping, Sweden"
+  employer         : "Linköping University"
   uri              : # URL
   email            : "duynam.robotics@gmail.com" 
 
