--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,11 @@ author:
   avatar           : "profile.jpg"
   name             : "Duy-Nam Bui"
   pronouns         : "🇻🇳 he/his"
-  bio              : "Ph.D. Candidate in Automatic Control"
+  bio              : "Ph.D. Student in Automatic Control"
   location         : "Linköping, Sweden"
   employer         : "Linköping University"
   uri              : # URL
-  email            : "duynam.robotics@gmail.com" 
+  email            : "duynam_dot_bui_at_liu_dot_se" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
