--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "Linköping, Sweden"
   employer         : "Linköping University"
   uri              : # URL
-  email            : "duynam_dot_bui_at_liu_dot_se" 
+  email            : "duy.nam.bui_at_liu.se" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
