--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "Linköping, Sweden"
   employer         : "Linköping University"
   uri              : # URL
-  email            : "duy.nam.bui_at_liu.se" 
+  email            : # URL
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -72,7 +72,7 @@ author:
   weibo            : # Username
   wikipedia        : # Username
   xing             : # Username
-  youtube          : "buiduynam"
+  youtube          : # "buiduynam"
   zhihu            : # Username
 
 # Publication Category - The following the list of publication categories and their headings
