--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,8 +14,8 @@ main:
   # - title: "Teaching"
   #   url: /teaching/    
     
-  - title: "Academic Service"
-    url: /service/
+  # - title: "Academic Service"
+  #   url: /service/
         
   # - title: "Achievement"
   #   url: /achievement/
